# models/modelset.go
@@ -15,5 +15,49 @@ type Modelset struct {
 	Path        string `gorm:"type:text" json:"path"`
 	Status      string `json:"status"`
 	Size        int    `json:"size"`
-	EngineType  string `json:"engine_type"`
+	Type        string `json:"type"`
+	JobId       string `json:"job_id"`
+}
+
+func ListModelSets(offset, limit int) ([]Modelset, int, error) {
+	var modelsets []Modelset
+	db.Find(&modelsets)
+
+	total := 0
+	res := db.Offset(offset).Limit(limit).Order("created_at desc").Find(&modelsets)
+	if res.Error != nil {
+		return modelsets, total, res.Error
+	}
+
+	db.Model(&Modelset{}).Count(&total)
+	return modelsets, total, nil
+}
+
+func GetModelsetById(id int) (Modelset, error) {
+	modelset := Modelset{ID: id}
+	res := db.First(&modelset)
+	if res.Error != nil {
+		return modelset, res.Error
+	}
+	return modelset, nil
+}
+
+func CreateModelset(modelset Modelset) error {
+	return db.Create(&modelset).Error
+}
+
+func UpdateModelset(modelset *Modelset) error {
+	res := db.Save(modelset)
+	if res.Error != nil {
+		return res.Error
+	}
+	return nil
+}
+
+func DeleteModelset(modelset *Modelset) error {
+	res := db.Delete(&modelset)
+	if res.Error != nil {
+		return res.Error
+	}
+	return nil
 }
