# routers/success_resp.go
@@ -24,6 +24,18 @@ type APISuccessRespGetDatasets struct {
 	Data GetDatasetsResp `json:"data"`
 }
 
+type APISuccessRespGetModelset struct {
+	Code int             `json:"code"`
+	Msg  string          `json:"msg"`
+	Data GetModelsetResp `json:"data"`
+}
+
+type APISuccessRespGetModelsets struct {
+	Code int              `json:"code"`
+	Msg  string           `json:"msg"`
+	Data GetModelsetsResp `json:"data"`
+}
+
 func SuccessResp(c *gin.Context, data interface{}) error {
 	res := APISuccessResp{
 		Code: SUCCESS_CODE,
